[gd_scene load_steps=3 format=3 uid="uid://voctt1ex0eqr"]

[ext_resource type="Script" uid="uid://b4ceoew55f6le" path="res://prueba_data_ram.gd" id="1_1lg0i"]
[ext_resource type="Script" uid="uid://brd5btuceiks8" path="res://time_data_ram.gd" id="1_ix2wl"]

[node name="time_data_ram" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ix2wl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0711931, 0.60899, 0.650352, 1)

[node name="prueba_data_ram" type="Node" parent="."]
script = ExtResource("1_1lg0i")

[node name="crea_5_millon" type="Button" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 149.0
offset_right = 524.0
offset_bottom = 180.0
text = "generar  5 millones"

[node name="random buscar 10k" type="Button" parent="."]
layout_mode = 0
offset_left = 257.0
offset_top = 142.0
offset_right = 349.0
offset_bottom = 173.0
text = "buscar 10k"

[node name="random_buscar_100k" type="Button" parent="."]
layout_mode = 0
offset_left = 719.0
offset_top = 119.0
offset_right = 727.0
offset_bottom = 127.0
text = "buscar 100k"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "es una prueba para ver e identificar el uso de ram y como gestionar mejor los recursos"

[node name="salir" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 149.0
offset_right = 164.0
offset_bottom = 180.0
text = "salir"

[node name="1millon" type="Button" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 224.0
offset_right = 535.0
offset_bottom = 255.0
text = "1_millon"

[connection signal="pressed" from="crea_5_millon" to="prueba_data_ram" method="_on_button_pressed"]
[connection signal="pressed" from="random buscar 10k" to="prueba_data_ram" method="_on_random_buscar_10k_pressed"]
[connection signal="pressed" from="random_buscar_100k" to="prueba_data_ram" method="_on_random_buscar_100k_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="1millon" to="prueba_data_ram" method="_on_millon_pressed"]
